<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_review_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/create_review_logo"
        android:layout_width="118dp"
        android:layout_height="78dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="76dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_text_only" />

    <EditText
        android:id="@+id/restaurant_name_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/Restaurant"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/review_title_in" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/review_title_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="Enter Review Title"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_review_logo" />

    <EditText
        android:id="@+id/review_body_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/Review"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_name_in" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slider"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="4dp"
        android:stepSize="1"
        android:valueFrom="0.0"
        android:valueTo="5.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rating_slider_text"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/cancel_review_button"
        android:layout_width="128dp"
        android:layout_height="54dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slider" />

    <Button
        android:id="@+id/publish_review_button"
        android:layout_width="128dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:text="@string/Post"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slider" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/rating_slider_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="116dp"
        android:text="@string/Rating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/review_body_in" />

    <ImageButton
        android:id="@+id/create_review_back_arrow"
        android:layout_width="53dp"
        android:layout_height="43dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:background="@null"
        android:scaleX="0.75"
        android:scaleY="0.75"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_white_24dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/inflate_ratings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="17dp"
        android:text="@string/Detailed_Ratings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/review_body_in" />

    <Button
        android:id="@+id/add_img_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="72dp"
        android:text="@string/Add_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/review_body_in" />

</androidx.constraintlayout.widget.ConstraintLayout>