<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <Button
        android:id="@+id/welcome_login_button"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="94dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_text_image" />

    <Button
        android:id="@+id/welcome_register_button"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="94dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_login_button" />

    <Button
        android:id="@+id/welcome_guest_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="41dp"
        android:text="@string/continue_as_guest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_register_button" />

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="115dp"
        android:layout_height="161dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo_chicken_only"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo_text_image"
        android:layout_width="131dp"
        android:layout_height="121dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="140dp"
        android:src="@drawable/logo_text_only"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_image" />

</androidx.constraintlayout.widget.ConstraintLayout>